# vulkan-tutorial-rs

./: Cargo.toml  build.rs
assets/: shader.slang
src/: buffers.rs  commands.rs  descriptors.rs  devices.rs  instance.rs  logging.rs  main.rs  pipeline.rs  surface.rs  swap_chain.rs  sync.rs
src/buffers/: index.rs  mod.rs  raw.rs  uniform.rs  vertex.rs
src/images/: depth.rs  mod.rs  raw.rs  texture.rs
