[package]
name = "vulkan-tuto-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
ash = "0.38"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
glam = { version = "0.32", features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
] }
log = "0.4"
sdl3 = { version = "0.18", features = ["ash"] }
tobj = { version = "4", default-features = false }

[patch.crates-io]
sdl3 = { git = "https://github.com/lerouxrgd/sdl3-rs.git", branch = "fix/window-event-occluded" }
